--- a/Wallet.Api/appsettings.AcceptanceTests.json
+++ b/Wallet.Api/appsettings.AcceptanceTests.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "WalletDB": {
-    "ConnectionString": "mongodb+srv://wallet:nv4LHTBGr7AIdxQp@cluster0.foju2sv.mongodb.net/test",
-    "DatabaseName": "Wallet",
+    "ConnectionString": "mongodb://localhost:27023",
+    "DatabaseName": "WalletTesting",
     "UsersCollectionName": "Users",
     "BankAccountsCollectionName": "BankAccounts",
     "TransactionsCollectionName": "Transactions"
